# sample-multiplatform

./: .gitignore  CMakeLists.txt  README.md  west.yml
.devcontainer/: Dockerfile  Dockerfile.zephyr  devcontainer.json
.devcontainer/linux/: Dockerfile
.github/workflows/: ci-container-zephyr.yml  ci-container.yml  formatting-checks.yml  linux.yml  main.yml  zephyr.yml
scripts/: check_c_formatting.sh
src/: main.c
src/common/: CMakeLists.txt  common.c
src/common/include/sample/: common.h
tests/: CMakeLists.txt
tests/coverage/: CMakeLists.txt
tests/leaks/: CMakeLists.txt
tests/system/: CMakeLists.txt  common.c
zephyr/: CMakeLists.txt
